# sse-mcp

./: .pre-commit-config.yaml  main.py  notes.md  pyproject.toml
